API表示の修正（機能自体・表示項目まだ修正必須）